--- a/index.html
+++ b/index.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>Student Helper Tools</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Welcome to Student Helper</h1>
-  <p>Free tools for students.</p>
+
+  <header>
+    <h1>Student Helper Tools</h1>
+    <p>Simple tools for Engineering & Commerce students</p>
+  </header>
+
+  <main>
+    <h2>Available Tools</h2>
+    <ul>
+      <li>Percentage Calculator (Coming Soon)</li>
+      <li>CGPA Calculator (Coming Soon)</li>
+      <li>EMI Calculator (Coming Soon)</li>
+    </ul>
+  </main>
+
+  <footer>
+    <p>© 2026 Student Helper</p>
+  </footer>
+
 </body>
 </html>
