--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
 
   <footer>
     <p>© 2026 Student Helper</p>
+    <p>
+      <a href="about.html">About</a> |
+      <a href="privacy-policy.html">Privacy Policy</a> |
+      <a href="contact.html">Contact</a>
+    </p>
   </footer>
 
 </body>
+
 </html>
