Add link to Percentage Calculator in index.html
Added link to Percentage Calculator in the tools list.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
   <main>
     <h2>Available Tools</h2>
     <ul>
-      <li>Percentage Calculator (Coming Soon)</li>
+      <li>
+        <a href="percentage-calculator.html">Percentage Calculator</a>
+      </li>
       <li>CGPA Calculator (Coming Soon)</li>
       <li>EMI Calculator (Coming Soon)</li>
     </ul>
@@ -34,3 +36,4 @@
 </body>
 
 </html>
+
