Add explanation section for percentage calculation
Added a section explaining how to calculate percentage with a formula and its usefulness for students.

--- a/percentage-calculator.html
+++ b/percentage-calculator.html
@@ -24,6 +24,25 @@
   <button onclick="calculate()">Calculate</button>
 
   <h2 id="result"></h2>
+  <section>
+    <h3>How to Calculate Percentage</h3>
+    <p>
+      To calculate percentage, divide the obtained marks by total marks
+      and multiply the result by 100.
+    </p>
+
+    <p>
+      Percentage Formula:
+      <br>
+      <strong>(Obtained Marks / Total Marks) × 100</strong>
+    </p>
+
+    <p>
+      This percentage calculator is useful for students to quickly
+      calculate exam results, test scores, and academic performance.
+    </p>
+   </section>
+  
 </main>
 
 <footer>
