--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
       <li>
         <a href="percentage-calculator.html">Percentage Calculator</a>
       </li>
-      <li>CGPA Calculator (Coming Soon)</li>
+      <li>
+        <a href="cgpa-calculator.html">CGPA Calculator</a>
+      </li>
       <li>EMI Calculator (Coming Soon)</li>
     </ul>
   </main>
@@ -36,4 +38,5 @@
 </body>
 
 </html>
+
 
