Enhance CGPA calculator with educational content
Added explanations for CGPA, SGPA, and related terms.

--- a/cgpa-calculator.html
+++ b/cgpa-calculator.html
@@ -40,6 +40,50 @@
       This CGPA calculator helps students quickly calculate their
       academic performance.
     </p>
+    <hr>
+
+    <h3>What is CGPA?</h3>
+    <p>
+      CGPA stands for <strong>Cumulative Grade Point Average</strong>.
+      It represents the average of grade points obtained in all subjects
+      during a semester or across multiple semesters.
+    </p>
+    <p>
+      CGPA is commonly used by universities and colleges to measure a
+      student’s overall academic performance.
+    </p>
+
+    <h3>What is SGPA?</h3>
+    <p>
+      SGPA stands for <strong>Semester Grade Point Average</strong>.
+      It represents the grade point average of a student in a single
+      semester.
+    </p>
+    <p>
+      Multiple SGPAs together are used to calculate the final CGPA.
+    </p>
+
+    <h3>Terms Used in CGPA Formula</h3>
+    <ul>
+      <li>
+        <strong>Total Grade Points:</strong> The sum of grade points obtained
+        in all subjects.
+      </li>
+      <li>
+        <strong>Number of Subjects:</strong> The total number of subjects
+        considered for calculation.
+      </li>
+      <li>
+        <strong>Grade Point:</strong> A numerical value assigned to a grade
+        (for example, A = 10, B = 8, etc.).
+      </li>
+    </ul>
+
+    <h3>Difference Between CGPA and SGPA</h3>
+    <p>
+      SGPA is calculated for one semester, while CGPA is calculated by
+      averaging SGPAs of all semesters completed.
+    </p>
   </section>
 </main>
 
