Enhance index.html with SEO meta tags and content
Added meta tags for SEO and improved content structure.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Student Helper Tools</title>
+  <meta name="description" content="Free online student tools including Percentage Calculator, CGPA Calculator and academic utilities for engineering, commerce and school students. Fast, simple and mobile-friendly.">
+  <meta name="keywords" content="student tools, percentage calculator, cgpa calculator, student helper tools, online calculator for students">
+  <meta name="author" content="Student Helper Tools">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -14,6 +18,39 @@
   </header>
 
   <main>
+    <section>
+      <p>
+        Student Helper Tools is a free online platform designed to help
+        students quickly perform academic calculations without confusion
+        or complex steps.
+      </p>
+
+      <p>
+        This website is useful for students from <strong>engineering,
+        commerce, and school</strong> backgrounds who want accurate
+        results in seconds.
+      </p>
+
+      <p>
+        Instead of downloading apps or doing manual calculations, students
+        can use our simple online tools directly from any device.
+      </p>
+
+      <h2>Available Student Tools</h2>
+      <ul>
+        <li>Percentage Calculator</li>
+        <li>CGPA Calculator</li>
+        <li>More student tools coming soon</li>
+      </ul>
+
+      <h2>Why Use Student Helper Tools?</h2>
+      <ul>
+        <li>No login required</li>
+        <li>Free and easy to use</li>
+        <li>Works on mobile, tablet, and desktop</li>
+        <li>Designed especially for students</li>
+      </ul>
+    </section>
     <h2>Available Tools</h2>
     <ul>
       <li>
@@ -38,5 +75,6 @@
 </body>
 
 </html>
+
 
 
