--- a/index.html
+++ b/index.html
@@ -3,78 +3,48 @@
 <head>
   <meta charset="UTF-8">
   <title>Student Helper Tools</title>
-  <meta name="description" content="Free online student tools including Percentage Calculator, CGPA Calculator and academic utilities for engineering, commerce and school students. Fast, simple and mobile-friendly.">
-  <meta name="keywords" content="student tools, percentage calculator, cgpa calculator, student helper tools, online calculator for students">
-  <meta name="author" content="Student Helper Tools">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Free student tools including percentage calculator, CGPA calculator and academic utilities for engineering, commerce and school students.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <header>
-    <h1>Student Helper Tools</h1>
-    <p>Simple tools for Engineering & Commerce students</p>
-  </header>
+<header>
+  <h1>Student Helper Tools</h1>
+  <p>Free online tools for students</p>
+</header>
 
-  <main>
-    <section>
-      <p>
-        Student Helper Tools is a free online platform designed to help
-        students quickly perform academic calculations without confusion
-        or complex steps.
-      </p>
-
-      <p>
-        This website is useful for students from <strong>engineering,
-        commerce, and school</strong> backgrounds who want accurate
-        results in seconds.
-      </p>
-
-      <p>
-        Instead of downloading apps or doing manual calculations, students
-        can use our simple online tools directly from any device.
-      </p>
-
-      <h2>Available Student Tools</h2>
-      <ul>
-        <li>Percentage Calculator</li>
-        <li>CGPA Calculator</li>
-        <li>More student tools coming soon</li>
-      </ul>
-
-      <h2>Why Use Student Helper Tools?</h2>
-      <ul>
-        <li>No login required</li>
-        <li>Free and easy to use</li>
-        <li>Works on mobile, tablet, and desktop</li>
-        <li>Designed especially for students</li>
-      </ul>
-    </section>
+<main>
+  <section>
     <h2>Available Tools</h2>
     <ul>
-      <li>
-        <a href="percentage-calculator.html">Percentage Calculator</a>
-      </li>
-      <li>
-        <a href="cgpa-calculator.html">CGPA Calculator</a>
-      </li>
+      <li><a href="percentage-calculator.html">Percentage Calculator</a></li>
+      <li><a href="cgpa-calculator.html">CGPA Calculator</a></li>
       <li>EMI Calculator (Coming Soon)</li>
     </ul>
-  </main>
+  </section>
 
-  <footer>
-    <p>© 2026 Student Helper</p>
+  <section>
     <p>
-      <a href="about.html">About</a> |
-      <a href="privacy-policy.html">Privacy Policy</a> |
-      <a href="contact.html">Contact</a>
+      Student Helper Tools is a free online platform designed to help
+      students quickly perform academic calculations without confusion
+      or complex steps.
     </p>
-  </footer>
+    <p>
+      This website is useful for students from engineering, commerce,
+      and school backgrounds who want accurate results in seconds.
+    </p>
+  </section>
+</main>
+
+<footer>
+  <p>© 2026 Student Helper Tools</p>
+  <p>
+    <a href="about.html">About</a> |
+    <a href="privacy-policy.html">Privacy Policy</a> |
+    <a href="contact.html">Contact</a>
+  </p>
+</footer>
 
 </body>
-
 </html>
-
-
-
