--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 <header>
   <h1>Student Helper Tools</h1>
   <p>Free online tools for students</p>
+  <nav>
+      <a href="index.html">Home</a> |
+      <a href="percentage-calculator.html">Percentage</a> |
+      <a href="cgpa-calculator.html">CGPA</a> |
+      <a href="about.html">About</a> |
+      <a href="contact.html">Contact</a>
+  </nav>
 </header>
 
 <main>
@@ -48,3 +55,4 @@
 
 </body>
 </html>
+
