Enhance index.html with user guidance section
Added a new section detailing who can use the website and its benefits for students.

--- a/index.html
+++ b/index.html
@@ -42,6 +42,26 @@
       and school backgrounds who want accurate results in seconds.
     </p>
   </section>
+  <section>
+      <h2>Who Can Use This Website?</h2>
+      <p>
+        This website is helpful for students who want quick and accurate
+        academic calculations without installing apps or doing manual math.
+      </p>
+
+      <ul>
+        <li>Engineering students calculating CGPA</li>
+        <li>Commerce students checking percentages</li>
+        <li>School students preparing exam results</li>
+        <li>Anyone who wants fast academic calculations</li>
+      </ul>
+
+      <p>
+        All tools are free to use and designed with simplicity so that even
+        beginners can understand the results easily.
+      </p>
+  </section>
+  
 </main>
 
 <footer>
@@ -55,5 +75,6 @@
 
 </body>
 </html>
+
 
 
