Revise index.html for SEO and content enhancements
Updated meta tags for SEO and improved content clarity.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="canonical" href="https://advaitpatel69-beep.github.io/Advait.github.io/index.html">
   <meta charset="UTF-8">
-  <title>Student Helper Tools</title>
-  <meta name="description" content="Free student tools including percentage calculator, CGPA calculator and academic utilities for engineering, commerce and school students.">
+  <title>Student Helper Tools – Free Student Calculators & Academic Tools</title>
+  <meta name="description" content="Free online student tools including Percentage and CGPA calculators. Designed for engineering, commerce, and school students. Fast, accurate, and mobile-friendly.">
+  <meta name="keywords" content="student tools, percentage calculator, CGPA calculator, online calculator, student helper">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -30,7 +32,19 @@
       <li>EMI Calculator (Coming Soon)</li>
     </ul>
   </section>
-
+  <section>
+      <h2>Why Use Student Helper Tools?</h2>
+      <p>
+        Student Helper Tools is designed to simplify your academic calculations
+        without installing apps. All tools are free and mobile-friendly.
+      </p>
+      <ul>
+        <li>Quickly calculate your exam percentages</li>
+        <li>Calculate CGPA accurately</li>
+        <li>Save time and avoid manual errors</li>
+        <li>Useful for students from engineering, commerce, and school</li>
+      </ul>
+  </section>
   <section>
     <p>
       Student Helper Tools is a free online platform designed to help
@@ -75,6 +89,7 @@
 
 </body>
 </html>
+
 
 
 
