Enhance index.html with website purpose section
Added a new section detailing the purpose of the website, emphasizing its role in simplifying academic calculations for students and its future expansion plans.

--- a/index.html
+++ b/index.html
@@ -75,7 +75,40 @@
         beginners can understand the results easily.
       </p>
   </section>
-  
+  <section>
+    <h2>Purpose of This Website</h2>
+    <p>
+      Student Helper Tools was created to solve a common problem faced by
+      students — confusion and time waste during academic calculations.
+      Many students struggle with manual calculations or unreliable apps
+      that show incorrect results.
+    </p>
+
+    <p>
+      This website provides simple and accurate tools that can be used
+      instantly without registration, installation, or technical knowledge.
+      All tools are designed with a focus on clarity and ease of use.
+    </p>
+
+    <p>
+      Whether you are calculating your exam percentage or your cumulative
+      grade point average, the tools here aim to give fast and correct
+      results that students can trust.
+    </p>
+
+    <p>
+      Student Helper Tools supports learners from different educational
+      backgrounds including engineering, commerce, and school-level studies.
+      The goal is to create a single platform where students can find
+      essential academic utilities in one place.
+    </p>
+
+    <p>
+      In the future, this website will be expanded with more calculators,
+      study notes, and helpful academic resources to assist students in
+      their daily learning journey.
+    </p>
+  </section>
 </main>
 
 <footer>
@@ -89,6 +122,7 @@
 
 </body>
 </html>
+
 
 
 
