Enhance HTML structure and SEO for calculator page
Updated the title and added a meta description for better SEO. Added navigation links for easier access to related tools.

--- a/percentage-calculator.html
+++ b/percentage-calculator.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Percentage Calculator</title>
+  <title>Percentage Calculator for Students – Student Helper Tools</title>
+  <meta name="description" content="Free online percentage calculator for students. Easily calculate exam percentage using obtained and total marks. Fast, accurate, and mobile-friendly.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -11,8 +12,15 @@
 <header>
   <h1>Percentage Calculator</h1>
   <p>Calculate percentage easily</p>
+  <nav>
+    <a href="index.html">Home</a> |
+    <a href="percentage-calculator.html">Percentage</a> |
+    <a href="cgpa-calculator.html">CGPA</a> |
+    <a href="about.html">About</a> |
+    <a href="contact.html">Contact</a>
+  </nav>
 </header>
-
+  
 <main>
   <p>Enter obtained marks and total marks:</p>
 
@@ -42,6 +50,17 @@
       calculate exam results, test scores, and academic performance.
     </p>
    </section>
+
+  <section>
+    <h3>Related Student Tools</h3>
+    <p>
+      You may also find these tools useful:
+    </p>
+    <ul>
+      <li><a href="cgpa-calculator.html">CGPA Calculator</a></li>
+      <li><a href="index.html">All Student Tools</a></li>
+    </ul>
+  </section>  
   
 </main>
 
