--- a/cgpa-calculator.html
+++ b/cgpa-calculator.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>CGPA Calculator</title>
+  <title>CGPA Calculator for Students – Student Helper Tools</title>
+  <meta name="description" content="Free CGPA calculator for engineering and college students. Calculate CGPA easily using SGPA or subject-wise grades with clear explanations.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -11,6 +12,13 @@
 <header>
   <h1>CGPA Calculator</h1>
   <p>Calculate your CGPA easily</p>
+  <nav>
+    <a href="index.html">Home</a> |
+    <a href="percentage-calculator.html">Percentage</a> |
+    <a href="cgpa-calculator.html">CGPA</a> |
+    <a href="about.html">About</a> |
+    <a href="contact.html">Contact</a>
+  </nav>
 </header>
 
 <main>
@@ -84,6 +92,13 @@
       SGPA is calculated for one semester, while CGPA is calculated by
       averaging SGPAs of all semesters completed.
     </p>
+  </section>
+  <section>
+    <h3>Related Student Tools</h3>
+    <ul>
+      <li><a href="percentage-calculator.html">Percentage Calculator</a></li>
+      <li><a href="index.html">All Student Tools</a></li>
+    </ul>
   </section>
 </main>
 
