Revise About page content and add new sections
Updated the content and structure of the About page to provide a clearer description of the website's purpose and tools offered.

--- a/about.html
+++ b/about.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>About – Student Helper Tools</title>
+  <title>About Us – Student Helper Tools</title>
+  <meta name="description" content="Learn about Student Helper Tools, an educational website providing free calculators and academic resources for students.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -13,22 +14,41 @@
 </header>
 
 <main>
-  <p>
-    Student Helper Tools is a free platform created to help students
-    from engineering, commerce, and other streams with simple and
-    easy-to-use online tools.
-  </p>
+  <section>
+    <p>
+      Student Helper Tools is an educational website created to assist
+      students with simple and accurate academic calculations.
+      The website provides free tools such as percentage and CGPA
+      calculators to help students save time and avoid calculation errors.
+    </p>
+ 
+    <p>
+      This platform is designed for students from various educational
+      backgrounds including engineering, commerce, and school-level
+      studies. All tools are web-based and do not require installation
+      or registration.
+    </p>
 
-  <p>
-    Our goal is to provide accurate calculators, converters, and
-    study-related tools that save time and improve productivity.
-  </p>
+    <p>
+      The goal of this website is to make academic utilities easily
+      accessible and understandable for every student. In the future,
+      more tools and educational resources may be added to improve
+      student productivity.
+    </p>
 
-  <p>
-    This website is built and maintained by a college student who is
-    learning web development and aims to create useful resources for
-    fellow students.
-  </p>
+    <p>
+      Student Helper Tools is an independent educational project created
+      to support learning and academic planning.
+    </p>
+  </section>  
+  <section>
+    <h2>Explore Our Tools</h2>
+    <ul>
+      <li><a href="percentage-calculator.html">Percentage Calculator</a></li>
+      <li><a href="cgpa-calculator.html">CGPA Calculator</a></li>
+      <li><a href="index.html">Home</a></li>
+    </ul>
+  </section>  
 </main>
 
 <footer>
