Revise privacy policy for clarity and completeness
Updated the privacy policy to include detailed information about user data collection, cookies, third-party services, and consent.

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Privacy Policy – Student Helper Tools</title>
+  <meta name="description" content="Privacy Policy for Student Helper Tools explaining how user information is collected, used, and protected.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -13,24 +14,57 @@
 </header>
 
 <main>
-  <p>
-    At Student Helper Tools, we respect your privacy. This website does
-    not collect any personal information directly from users.
-  </p>
+  <section>
+    <p>
+      At Student Helper Tools, we value the privacy of our visitors.
+      This Privacy Policy document outlines the types of information
+      that are collected and recorded and how we use it.
+    </p>
 
-  <p>
-    We may use third-party services such as Google AdSense in the future.
-    These services may use cookies to display relevant advertisements.
-  </p>
+    <h2>Information We Collect</h2>
+    <p>
+      We do not collect personal information such as name, email address,
+      or phone number from visitors. The tools provided on this website
+      work entirely on the client side.
+    </p>
 
-  <p>
-    Student Helper Tools is not responsible for the privacy practices
-    of external websites linked from this site.
-  </p>
+    <h2>Cookies</h2>
+    <p>
+      Student Helper Tools may use cookies to improve user experience.
+      Cookies are small files stored on your device that help analyze
+      user behavior and improve website functionality.
+    </p>
 
-  <p>
-    By using this website, you agree to this privacy policy.
-  </p>
+    <h2>Third-Party Services</h2>
+    <p>
+      This website may use third-party services such as Google AdSense
+      to display advertisements. These services may use cookies, JavaScript,
+      or web beacons to display ads relevant to users.
+    </p>
+
+    <h2>Google AdSense</h2>
+    <p>
+      Google, as a third-party vendor, uses cookies to serve ads to users.
+      Google's use of the DART cookie enables it to serve ads based on
+      users' visits to this and other websites on the internet.
+      Users may opt out of personalized advertising by visiting
+      Google Ad Settings.
+    </p>
+
+    <h2>Consent</h2>
+    <p>
+      By using our website, you hereby consent to our Privacy Policy
+      and agree to its terms.
+    </p>
+  </section> 
+  <section>
+    <h2>Contact Us</h2>
+    <p>
+      If you have any questions about this Privacy Policy,
+      you can contact us through our
+      <a href="contact.html">Contact page</a>.
+    </p>
+  </section>
 </main>
 
 <footer>
