Revise contact page content and structure
Updated the contact page with a new title and added sections for user feedback and contact methods.

--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Contact – Student Helper Tools</title>
+  <title>Contact Us – Student Helper Tools</title>
+  <meta name="description" content="Contact Student Helper Tools for questions, feedback, or support related to our student calculators and educational tools.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -13,14 +14,37 @@
 </header>
 
 <main>
-  <p>
-    If you have suggestions, feedback, or questions, feel free to
-    contact us.
-  </p>
+  <section>
+    <p>
+      If you have any questions, suggestions, or feedback related to
+      Student Helper Tools, feel free to reach out.
+      We value user feedback and aim to improve the website continuously.
+    </p>
 
-  <p>
-    📧 Email: studentshelpertools@gmail.com
-  </p>
+    <p>
+      You can contact us for:
+    </p>
+
+    <ul>
+      <li>Questions about calculators</li>
+      <li>Reporting errors or issues</li>
+      <li>Suggestions for new tools</li>
+    </ul>
+  </section>
+  <section>
+    <h2>How to Reach Us</h2>
+    <p>
+      📧 Email: <strong>studentshelpertools@gmail.com</strong>
+    </p>
+  </section>
+  <section>
+    <h2>Useful Links</h2>
+    <ul>
+      <li><a href="about.html">About Us</a></li>
+      <li><a href="privacy-policy.html">Privacy Policy</a></li>
+      <li><a href="index.html">Home</a></li>
+    </ul>
+  </section> 
 </main>
 
 <footer>
