Add Google site verification meta tag
Added Google site verification meta tag for SEO.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <link rel="canonical" href="https://advaitpatel69-beep.github.io/Advait.github.io/index.html">
   <meta charset="UTF-8">
+  <meta name="google-site-verification" content="VvKOzecgQdv_du7vDOzsCKbhgmf-N3J4wt6kVtkT5SM" />
   <title>Student Helper Tools – Free Student Calculators & Academic Tools</title>
   <meta name="description" content="Free online student tools including Percentage and CGPA calculators. Designed for engineering, commerce, and school students. Fast, accurate, and mobile-friendly.">
   <meta name="keywords" content="student tools, percentage calculator, CGPA calculator, online calculator, student helper">
@@ -122,6 +123,7 @@
 
 </body>
 </html>
+
 
 
 
