Update sc intrest calculator.html

--- a/sc intrest calculator.html
+++ b/sc intrest calculator.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple & Compound Interest Calculator (INR/USD)</title>
+    <title>Simple & Compound Interest Calculator for Students</title>
+    <meta name="description" content="Free simple and compound interest calculator for students. Calculate SI, CI, total amount and interest with formulas and examples.">
+    <meta name="robots" content="index, follow">
     
     <script type="text/x-mathjax-config">
         MathJax.Hub.Config({
@@ -241,7 +243,7 @@
 
 <div class="container">
     <div class="header">
-        <h1>💲 Interest Calculator</h1>
+        <h1>💲 Simple & Compound Interest Calculator</h1>
         <p style="margin:0; font-size: 0.9rem;">Calculate Simple (SI) and Compound (CI) Interest</p>
     </div>
 
@@ -628,3 +630,4 @@
 
 </body>
 </html>
+
