Update sc intrest calculator.html

--- a/sc intrest calculator.html
+++ b/sc intrest calculator.html
@@ -32,12 +32,7 @@
 
         body {
             font-family: 'Inter', sans-serif;
-            background-color: var(--bg);
-            color: var(--text);
-            padding: 20px;
             margin: 0;
-            display: flex;
-            justify-content: center;
         }
 
         .container {
@@ -238,8 +233,58 @@
         }
 
     </style>
+
+
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "FAQPage",
+  "mainEntity": [
+    {
+      "@type": "Question",
+      "name": "What is Simple Interest?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Simple Interest is calculated only on the principal amount using the formula SI = (P × R × T) / 100."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "What is Compound Interest?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Compound Interest is calculated on the principal plus previously earned interest."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Which interest is better for long-term investment?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Compound interest is better for long-term investments because interest grows on accumulated interest."
+      }
+    }
+  ]
+}
+</script>
+    
 </head>
 <body>
+
+    <header>
+  <h1>Student Helper Tools</h1>
+  <p>Free online tools for students</p>
+  <nav>
+      <a href="index.html">Home</a> |
+      <a href="percentage-calculator.html">Percentage</a> |
+      <a href="cgpa-calculator.html">CGPA</a> |
+      <a href="about.html">About</a> |
+      <a href="contact.html">Contact</a>
+  </nav>
+</header>
+
+    <main class="tool-wrapper">
+        <div class="tool-container">        
 
 <div class="container">
     <div class="header">
@@ -351,6 +396,18 @@
         </div>
     </div>
 </div>
+        </div>
+    </main>
+
+
+    <section class="internal-links">
+  <h2>Related Student Tools</h2>
+  <ul>
+    <li><a href="percentage-calculator.html">Percentage Calculator</a></li>
+    <li><a href="cgpa-calculator.html">CGPA Calculator</a></li>
+    <li><a href="index.html">All Student Tools</a></li>
+  </ul>
+</section>
 
 <script>
     let currentMode = 'simple';
@@ -628,6 +685,16 @@
 
 </script>
 
+    <footer>
+  <p>© 2026 Student Helper Tools</p>
+  <p>
+    <a href="about.html">About</a> |
+    <a href="privacy-policy.html">Privacy Policy</a> |
+    <a href="contact.html">Contact</a>
+  </p>
+</footer>
+
 </body>
 </html>
+
 
