--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <ul>
       <li><a href="percentage-calculator.html">Percentage Calculator</a></li>
       <li><a href="cgpa-calculator.html">CGPA Calculator</a></li>
+      <li><a href="simple-compound-interest.html">Simple & Compound Interest Calculator</a></li>
       <li>EMI Calculator (Coming Soon)</li>
     </ul>
   </section>
@@ -123,6 +124,7 @@
 
 </body>
 </html>
+
 
 
 
