--- a/cgpa-calculator.html
+++ b/cgpa-calculator.html
@@ -98,6 +98,7 @@
     <ul>
       <li><a href="percentage-calculator.html">Percentage Calculator</a></li>
       <li><a href="index.html">All Student Tools</a></li>
+      <li><a href="sc intrest calculator.html">Simple & Compound Interest Calculator</a></li>
     </ul>
   </section>
 </main>
