--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
     <ul>
       <li><a href="percentage-calculator.html">Percentage Calculator</a></li>
       <li><a href="cgpa-calculator.html">CGPA Calculator</a></li>
-      <li><a href="sc intrest calculator.html">Simple & Compound Interest Calculator</a></li>
+      <li><a href="simple-compound-interest-calculator.html">Simple & Compound Interest Calculator</a></li>
       <li><a href="index.html">Home</a></li>
     </ul>
   </section>  
