--- a/percentage-calculator.html
+++ b/percentage-calculator.html
@@ -58,7 +58,7 @@
     </p>
     <ul>
       <li><a href="cgpa-calculator.html">CGPA Calculator</a></li>
-      <li><a href="sc intrest calculator.html">Simple & Compound Interest Calculator</a></li>
+      <li><a href="simple-compound-interest-calculator.html">Simple & Compound Interest Calculator</a></li>
       <li><a href="index.html">All Student Tools</a></li>
     </ul>
   </section>  
