--- a/simple-compound-interest-calculator.html
+++ b/simple-compound-interest-calculator.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Simple & Compound Interest Calculator for Students</title>
     <meta name="description" content="Free simple and compound interest calculator for students. Calculate SI, CI, total amount and interest with formulas and examples.">
+    <meta name="keywords" content="simple interest calculator, compound interest calculator, SI CI calculator, interest calculator for students, simple and compound interest formula, online interest calculator">
     <meta name="robots" content="index, follow">
     
     <script type="text/x-mathjax-config">
@@ -725,4 +726,5 @@
 
 </body>
 </html>
+
 
