--- a/percentage-calculator.html
+++ b/percentage-calculator.html
@@ -12,12 +12,12 @@
 <header>
   <h1>Percentage Calculator</h1>
   <p>Calculate percentage easily</p>
-  <nav>
-    <a href="index.html">Home</a> |
-    <a href="percentage-calculator.html">Percentage</a> |
-    <a href="cgpa-calculator.html">CGPA</a> |
-    <a href="about.html">About</a> |
-    <a href="contact.html">Contact</a>
+  <nav class="main-nav">
+    <a href="index.html">Home</a>
+
+    <span class="nav-disabled">Student Calculators (Coming Soon)</span>
+    <span class="nav-disabled">Medical Calculators (Coming Soon)</span>
+    <span class="nav-disabled">Finance Calculators (Coming Soon)</span>
   </nav>
 </header>
   
