--- a/simple-compound-interest-calculator.html
+++ b/simple-compound-interest-calculator.html
@@ -301,12 +301,12 @@
     <header>
   <h1>Student Helper Tools</h1>
   <p>Free online tools for students</p>
-  <nav>
-      <a href="index.html">Home</a> |
-      <a href="percentage-calculator.html">Percentage</a> |
-      <a href="cgpa-calculator.html">CGPA</a> |
-      <a href="about.html">About</a> |
-      <a href="contact.html">Contact</a>
+  <nav class="main-nav">
+    <a href="index.html">Home</a>
+
+    <span class="nav-disabled">Student Calculators (Coming Soon)</span>
+    <span class="nav-disabled">Medical Calculators (Coming Soon)</span>
+    <span class="nav-disabled">Finance Calculators (Coming Soon)</span>
   </nav>
 </header>
 
@@ -726,5 +726,6 @@
 
 </body>
 </html>
+
 
 
