--- a/about.html
+++ b/about.html
@@ -11,6 +11,14 @@
 
 <header>
   <h1>About Student Helper Tools</h1>
+
+  <nav class="main-nav">
+    <a href="index.html">Home</a>
+
+    <span class="nav-disabled">Student Calculators (Coming Soon)</span>
+    <span class="nav-disabled">Medical Calculators (Coming Soon)</span>
+    <span class="nav-disabled">Finance Calculators (Coming Soon)</span>
+  </nav>
 </header>
 
 <main>
