--- a/percentage-calculator.html
+++ b/percentage-calculator.html
@@ -66,9 +66,21 @@
 </main>
 
 <footer>
-  <p>
+  <nav>
     <a href="index.html">Home</a> |
+    <a href="about.html">About</a> |
+    <a href="contact.html">Contact</a> |
     <a href="privacy-policy.html">Privacy Policy</a>
+  </nav>
+
+  <div class="footer-categories">
+    <span class="nav-disabled">Student Calculators (Coming Soon)</span> |
+    <span class="nav-disabled">Medical Calculators (Coming Soon)</span> |
+    <span class="nav-disabled">Finance Calculators (Coming Soon)</span>
+  </div>
+
+  <p class="footer-note">
+    © 2026 Student Helper Tools. All rights reserved.
   </p>
 </footer>
 
