--- a/contact.html
+++ b/contact.html
@@ -57,6 +57,20 @@
 
 <footer>
   <p>© 2026 Student Helper Tools</p>
+
+  <nav>
+    <a href="index.html">Home</a> |
+    <a href="about.html">About</a> |
+    <a href="contact.html">Contact</a> |
+    <a href="privacy-policy.html">Privacy Policy</a>
+  </nav>
+
+  <div class="footer-categories">
+    <span class="nav-disabled">Student Calculators (Coming Soon)</span> |
+    <span class="nav-disabled">Medical Calculators (Coming Soon)</span> |
+    <span class="nav-disabled">Finance Calculators (Coming Soon)</span>
+  </div>
+
 </footer>
 
 </body>
