--- a/index.html
+++ b/index.html
@@ -111,6 +111,37 @@
       their daily learning journey.
     </p>
   </section>
+
+  <section class="homepage-categories">
+  <h2>Calculator Categories</h2>
+
+  <div class="category-block">
+    <h3>Student Calculators</h3>
+    <p>
+      Tools designed to help students with academic and everyday calculations
+      such as percentage, CGPA, and interest calculations.
+    </p>
+    <span class="nav-disabled">More student calculators coming soon</span>
+  </div>
+
+  <div class="category-block">
+    <h3>Medical & Health Calculators</h3>
+    <p>
+      Health-related calculators to understand body metrics, daily needs,
+      and fitness indicators.
+    </p>
+    <span class="nav-disabled">Medical calculators coming soon</span>
+  </div>
+
+  <div class="category-block">
+    <h3>Finance Calculators</h3>
+    <p>
+      Financial tools to help with loans, taxes, savings, and planning.
+    </p>
+    <span class="nav-disabled">Finance calculators coming soon</span>
+  </div>
+</section>
+  
 </main>
 
 <footer>
@@ -131,6 +162,7 @@
 
 </body>
 </html>
+
 
 
 
