--- a/index.html
+++ b/index.html
@@ -35,49 +35,6 @@
     </ul>
   </section>
   <section>
-      <h2>Why Use Student Helper Tools?</h2>
-      <p>
-        Student Helper Tools is designed to simplify your academic calculations
-        without installing apps. All tools are free and mobile-friendly.
-      </p>
-      <ul>
-        <li>Quickly calculate your exam percentages</li>
-        <li>Calculate CGPA accurately</li>
-        <li>Save time and avoid manual errors</li>
-        <li>Useful for students from engineering, commerce, and school</li>
-      </ul>
-  </section>
-  <section>
-    <p>
-      Student Helper Tools is a free online platform designed to help
-      students quickly perform academic calculations without confusion
-      or complex steps.
-    </p>
-    <p>
-      This website is useful for students from engineering, commerce,
-      and school backgrounds who want accurate results in seconds.
-    </p>
-  </section>
-  <section>
-      <h2>Who Can Use This Website?</h2>
-      <p>
-        This website is helpful for students who want quick and accurate
-        academic calculations without installing apps or doing manual math.
-      </p>
-
-      <ul>
-        <li>Engineering students calculating CGPA</li>
-        <li>Commerce students checking percentages</li>
-        <li>School students preparing exam results</li>
-        <li>Anyone who wants fast academic calculations</li>
-      </ul>
-
-      <p>
-        All tools are free to use and designed with simplicity so that even
-        beginners can understand the results easily.
-      </p>
-  </section>
-  <section>
     <h2>Purpose of This Website</h2>
     <p>
       Student Helper Tools was created to solve a common problem faced by
@@ -121,6 +78,12 @@
       Tools designed to help students with academic and everyday calculations
       such as percentage, CGPA, and interest calculations.
     </p>
+
+    <ul>
+      <li><a href="percentage-calculator.html">Percentage Calculator</a></li>
+      <li><a href="cgpa-calculator.html">CGPA Calculator</a></li>
+    </ul>
+    
     <span class="nav-disabled">More student calculators coming soon</span>
   </div>
 
@@ -138,9 +101,49 @@
     <p>
       Financial tools to help with loans, taxes, savings, and planning.
     </p>
+
+    <ul>
+      <li><a href="simple-compound-interest-calculator.html">Simple & Compound Interest Calculator</a></li>
+    </ul>
+    
     <span class="nav-disabled">Finance calculators coming soon</span>
   </div>
 </section>
+  
+  <section>
+      <h2>Why Use Student Helper Tools?</h2>
+      <p>
+        Student Helper Tools is designed to simplify your academic calculations
+        without installing apps. All tools are free and mobile-friendly.
+      </p>
+      <ul>
+        <li>Quickly calculate your exam percentages</li>
+        <li>Calculate CGPA accurately</li>
+        <li>Save time and avoid manual errors</li>
+        <li>Useful for students from engineering, commerce, and school</li>
+      </ul>
+  </section>
+ 
+  <section>
+      <h2>Who Can Use This Website?</h2>
+      <p>
+        This website is helpful for students who want quick and accurate
+        academic calculations without installing apps or doing manual math.
+      </p>
+
+      <ul>
+        <li>Engineering students calculating CGPA</li>
+        <li>Commerce students checking percentages</li>
+        <li>School students preparing exam results</li>
+        <li>Anyone who wants fast academic calculations</li>
+      </ul>
+
+      <p>
+        All tools are free to use and designed with simplicity so that even
+        beginners can understand the results easily.
+      </p>
+  </section>
+  
   
 </main>
 
@@ -162,6 +165,7 @@
 
 </body>
 </html>
+
 
 
 
