--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <li><a href="simple-compound-interest-calculator.html">Simple & Compound Interest Calculator</a></li>
     </ul>
     
-    <span class="nav-disabled">Finance calculators coming soon</span>
+    <span class="nav-disabled">More Finance calculators coming soon</span>
   </div>
 </section>
   
@@ -165,6 +165,7 @@
 
 </body>
 </html>
+
 
 
 
