--- a/finance-sip-calculator.html
+++ b/finance-sip-calculator.html
@@ -1055,7 +1055,7 @@
         </div>
     </div>
     <div class="copyright">
-        <p>&copy; 2026 Finance Calculators. All rights reserved.</p>
+        <p>&copy; Finance Calculators. All rights reserved.</p>
     </div>
 </footer>
 
