--- a/finance/finance-sip-calculator.html
+++ b/finance/finance-sip-calculator.html
@@ -661,7 +661,7 @@
         <div class="header-container">
             <div class="site-title">Finance Calculators</div>
             <nav>
-                <a href="index.html">Home</a>
+                <a href="../index.html">Home</a>
 
                 <span class="nav-disabled">Student Calculators (Coming Soon)</span>
                 <span class="nav-disabled">Medical Calculators (Coming Soon)</span>
@@ -674,7 +674,7 @@
             </div>
         </div>
         <div class="mobile-nav" id="mobileNav">
-            <a href="index.html">Home</a>
+            <a href="../index.html">Home</a>
 
             <span class="nav-disabled">Student Calculators (Coming Soon)</span>
             <span class="nav-disabled">Medical Calculators (Coming Soon)</span>
@@ -944,9 +944,9 @@
         <div class="content-section">
             <h2>Explore More Calculators</h2>
             <div class="calculator-links">
-                <a href="sc-interest-calculator.html">Simple & Compound Interest Calculator</a>
-                <a href="percentage-calculator.html">Percentage Calculator</a>
-                <a href="cgpa-calculator.html">CGPA Calculator</a>
+                <a href="../sc-interest-calculator.html">Simple & Compound Interest Calculator</a>
+                <a href="../percentage-calculator.html">Percentage Calculator</a>
+                <a href="../cgpa-calculator.html">CGPA Calculator</a>
             </div>
         </div>
         
@@ -1032,16 +1032,16 @@
         <div class="footer-section">
             <h3>Quick Links</h3>
             <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">About</a></li>
-              <li><a href="contact.html">Contact</a></li>
-              <li><a href="privacy-policy.html">Privacy Policy</a></li>
+              <li><a href="../index.html">Home</a></li>
+              <li><a href="../about.html">About</a></li>
+              <li><a href="../contact.html">Contact</a></li>
+              <li><a href="../privacy-policy.html">Privacy Policy</a></li>
             </ul>
         </div>
         <div class="footer-section">
             <h3>Finance Tools</h3>
             <ul>
-                <li><a href="sc-interest-calculator.html">Simple & Compound Interest Calculator</a></li>
+                <li><a href="../sc-interest-calculator.html">Simple & Compound Interest Calculator</a></li>
                 
                 <li><span class="coming-soon">FD Calculator (Coming Soon)</span></li>
                 <li><span class="coming-soon">GST Calculator (Coming Soon)</span></li>
