--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <li><a href="percentage-calculator.html">Percentage Calculator</a></li>
       <li><a href="cgpa-calculator.html">CGPA Calculator</a></li>
       <li><a href="simple-compound-interest-calculator.html">Simple & Compound Interest Calculator</a></li>
-      <li>EMI Calculator (Coming Soon)</li>
+      <li><a href="/finance/finance-sip-calculator.html">SIP Calculator</a></li>
     </ul>
   </section>
   <section>
@@ -104,6 +104,7 @@
 
     <ul>
       <li><a href="simple-compound-interest-calculator.html">Simple & Compound Interest Calculator</a></li>
+      <li><a href="/finance/finance-sip-calculator.html">SIP Calculator</a></li>
     </ul>
     
     <span class="nav-disabled">More Finance calculators coming soon</span>
@@ -165,6 +166,7 @@
 
 </body>
 </html>
+
 
 
 
