--- a/simple-compound-interest-calculator.html
+++ b/simple-compound-interest-calculator.html
@@ -427,18 +427,19 @@
     </main>
 
 
-    <section class="internal-links">
-  <h2>Related Student Tools</h2>
+ <section class="internal-links">
+  <h2>Recommended Tools</h2>
   <ul>
+    <li><a href="/Advait.github.io/finance/finance-sip-calculator.html">SIP Calculator</a></li>
     <li><a href="percentage-calculator.html">Percentage Calculator</a></li>
     <li><a href="cgpa-calculator.html">CGPA Calculator</a></li>
     <li><a href="index.html">All Student Tools</a></li>
   </ul>
-</section>
+ </section>
 
 
  <footer>
-  <p>© 2026 Student Helper Tools</p>
+  <p>© Student Helper Tools</p>
   <nav>
     <a href="index.html">Home</a> |
     <a href="about.html">About</a> |
@@ -733,6 +734,7 @@
 
 </body>
 </html>
+
 
 
 
