--- a/finance/finance-sip-calculator.html
+++ b/finance/finance-sip-calculator.html
@@ -944,7 +944,7 @@
         <div class="content-section">
             <h2>Explore More Calculators</h2>
             <div class="calculator-links">
-                <a href="../sc-interest-calculator.html">Simple & Compound Interest Calculator</a>
+                <a href="../simple-compound-interest-calculator.html">Simple & Compound Interest Calculator</a>
                 <a href="../percentage-calculator.html">Percentage Calculator</a>
                 <a href="../cgpa-calculator.html">CGPA Calculator</a>
             </div>
@@ -1041,7 +1041,7 @@
         <div class="footer-section">
             <h3>Finance Tools</h3>
             <ul>
-                <li><a href="../sc-interest-calculator.html">Simple & Compound Interest Calculator</a></li>
+                <li><a href="../simple-compound-interest-calculator.html">Simple & Compound Interest Calculator</a></li>
                 
                 <li><span class="coming-soon">FD Calculator (Coming Soon)</span></li>
                 <li><span class="coming-soon">GST Calculator (Coming Soon)</span></li>
