--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       <li><a href="cgpa-calculator.html">CGPA Calculator</a></li>
       <li><a href="simple-compound-interest-calculator.html">Simple & Compound Interest Calculator</a></li>
       <li><a href="/Advait.github.io/finance/finance-sip-calculator.html">SIP Calculator</a></li>
+      <li><a href="/Advait.github.io/finance/finance-emi-calculator.html">EMI Calculator</a></li>
     </ul>
   </section>
   <section>
@@ -82,6 +83,7 @@
     <ul>
       <li><a href="percentage-calculator.html">Percentage Calculator</a></li>
       <li><a href="cgpa-calculator.html">CGPA Calculator</a></li>
+      <li><a href="simple-compound-interest-calculator.html">Simple & Compound Interest Calculator</a></li>
     </ul>
     
     <span class="nav-disabled">More student calculators coming soon</span>
@@ -105,6 +107,7 @@
     <ul>
       <li><a href="simple-compound-interest-calculator.html">Simple & Compound Interest Calculator</a></li>
       <li><a href="/Advait.github.io/finance/finance-sip-calculator.html">SIP Calculator</a></li>
+      <li><a href="/Advait.github.io/finance/finance-emi-calculator.html">EMI Calculator</a></li>
     </ul>
     
     <span class="nav-disabled">More Finance calculators coming soon</span>
@@ -166,6 +169,7 @@
 
 </body>
 </html>
+
 
 
 
