--- a/simple-compound-interest-calculator.html
+++ b/simple-compound-interest-calculator.html
@@ -431,6 +431,7 @@
   <h2>Recommended Tools</h2>
   <ul>
     <li><a href="/Advait.github.io/finance/finance-sip-calculator.html">SIP Calculator</a></li>
+    <li><a href="/Advait.github.io/finance/finance-emi-calculator.html">EMI Calculator</a></li>
     <li><a href="percentage-calculator.html">Percentage Calculator</a></li>
     <li><a href="cgpa-calculator.html">CGPA Calculator</a></li>
     <li><a href="index.html">All Student Tools</a></li>
@@ -734,6 +735,7 @@
 
 </body>
 </html>
+
 
 
 
