--- a/finance/finance-sip-calculator.html
+++ b/finance/finance-sip-calculator.html
@@ -944,6 +944,7 @@
         <div class="content-section">
             <h2>Explore More Calculators</h2>
             <div class="calculator-links">
+                <a href="/Advait.github.io/finance/finance-emi-calculator.html">EMI Calculator</a>
                 <a href="/Advait.github.io/simple-compound-interest-calculator.html">Simple & Compound Interest Calculator</a>
                 <a href="/Advait.github.io/percentage-calculator.html">Percentage Calculator</a>
                 <a href="/Advait.github.io/cgpa-calculator.html">CGPA Calculator</a>
@@ -1041,6 +1042,8 @@
         <div class="footer-section">
             <h3>Finance Tools</h3>
             <ul>
+                <li><a href="/Advait.github.io/finance/finance-sip-calculator.html">SIP Calculator</a></li>
+                <li><a href="/Advait.github.io/finance/finance-emi-calculator.html">EMI Calculator</a></li>
                 <li><a href="/Advait.github.io/simple-compound-interest-calculator.html">Simple & Compound Interest Calculator</a></li>
                 
                 <li><span class="coming-soon">FD Calculator (Coming Soon)</span></li>
