--- a/finance/finance-emi-calculator.html
+++ b/finance/finance-emi-calculator.html
@@ -693,10 +693,10 @@
         <div class="content-section">
             <h2>Explore More Calculators</h2>
             <div class="calculator-links">
-	            	<a href="/Advait.github.io/finance/finance-sip-calculator.html">SIP Calculator</a>
-                <a href="/Advait.github.io/simple-compound-interest-calculator.html">Simple & Compound Interest Calculator</a>
-                <a href="/Advait.github.io/percentage-calculator.html">Percentage Calculator</a>
-                <a href="/Advait.github.io/cgpa-calculator.html">CGPA Calculator</a>
+	            <li><a href="/Advait.github.io/finance/finance-sip-calculator.html">SIP Calculator</a></li>
+                <li><a href="/Advait.github.io/simple-compound-interest-calculator.html">Simple & Compound Interest Calculator</a></li>
+                <li><a href="/Advait.github.io/percentage-calculator.html">Percentage Calculator</a></li>
+                <li><a href="/Advait.github.io/cgpa-calculator.html">CGPA Calculator</a></li>
             </div>
         </div>
 
